monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090a {

  A = "a";
  B = (who:A | who:"Tom")*;

}
